--- a/01 - Introduction to Deep Learning/04. Autoencoders/Assignment 6 - Autoencoders.ipynb
+++ b/01 - Introduction to Deep Learning/04. Autoencoders/Assignment 6 - Autoencoders.ipynb
@@ -677,18 +677,22 @@
     "    encoder = keras.models.Sequential()\n",
     "    encoder.add(L.InputLayer(img_shape))\n",
     "    encoder.add(L.Flatten())\n",
-    "    encoder.add(L.Dense(code_size*8, activation='elu'))\n",
-    "    encoder.add(L.Dense(code_size*4, activation='elu'))\n",
-    "    encoder.add(L.Dense(code_size*2, activation='elu'))\n",
+    "    encoder.add(L.Dense(code_size*32, activation='relu'))\n",
+    "    encoder.add(L.Dense(code_size*16, activation='relu'))\n",
+    "    encoder.add(L.Dense(code_size*8, activation='relu'))\n",
+    "    encoder.add(L.Dense(code_size*4, activation='relu'))\n",
+    "    encoder.add(L.Dense(code_size*2, activation='relu'))\n",
     "    encoder.add(L.Dense(code_size))\n",
     "    \n",
     "    # Decoder\n",
     "    decoder = keras.models.Sequential()\n",
     "    decoder.add(L.InputLayer((code_size,)))\n",
-    "    decoder.add(L.Dense(code_size*2, activation='elu'))\n",
-    "    decoder.add(L.Dense(code_size*4, activation='elu'))\n",
-    "    decoder.add(L.Dense(code_size*8))\n",
-    "    decoder.add(L.Dense(np.prod(img_shape), activation='elu'))\n",
+    "    decoder.add(L.Dense(code_size*2, activation='relu'))\n",
+    "    decoder.add(L.Dense(code_size*4, activation='relu'))\n",
+    "    decoder.add(L.Dense(code_size*8, activation='relu'))\n",
+    "    decoder.add(L.Dense(code_size*16, activation='relu'))\n",
+    "    decoder.add(L.Dense(code_size*32)\n",
+    "    decoder.add(L.Dense(np.prod(img_shape), activation='relu'))\n",
     "    decoder.add(L.Reshape(img_shape))\n",
     "    \n",
     "    return encoder, decoder"
@@ -718,26 +722,26 @@
     "    # ENCODER\n",
     "    encoder = keras.models.Sequential()\n",
     "    encoder.add(L.InputLayer(img_shape))\n",
-    "    encoder.add(L.Conv2D(32, (3, 3), strides = (1, 1), padding=\"same\", activation='relu'))\n",
-    "    encoder.add(L.MaxPooling2D((2, 2)))\n",
-    "    encoder.add(L.Conv2D(64, (3, 3), strides = (1, 1), padding=\"same\", activation='relu'))\n",
-    "    encoder.add(L.MaxPooling2D((2, 2)))\n",
-    "    encoder.add(L.Conv2D(128, (3, 3), strides = (1, 1), padding=\"same\", activation='relu'))\n",
-    "    encoder.add(L.MaxPooling2D((2, 2)))\n",
-    "    encoder.add(L.Conv2D(256, (3, 3), strides = (1, 1), padding=\"same\", activation='relu'))\n",
-    "    encoder.add(L.MaxPooling2D((2, 2)))\n",
+    "    encoder.add(L.Conv2D(32, (3,3), strides=(1,1), padding=\"same\", activation='relu'))\n",
+    "    encoder.add(L.MaxPooling2D((2,2)))\n",
+    "    encoder.add(L.Conv2D(64, (3,3), strides=(1,1), padding=\"same\", activation='relu'))\n",
+    "    encoder.add(L.MaxPooling2D((2,2)))\n",
+    "    encoder.add(L.Conv2D(128, (3,3), strides=(1,1), padding=\"same\", activation='relu'))\n",
+    "    encoder.add(L.MaxPooling2D((2,2)))\n",
+    "    encoder.add(L.Conv2D(256, (3,3), strides=(1,1), padding=\"same\", activation='relu'))\n",
+    "    encoder.add(L.MaxPooling2D((2,2)))\n",
     "    encoder.add(L.Flatten())\n",
     "    encoder.add(L.Dense(code_size))\n",
     "    \n",
     "    # DECODER\n",
     "    decoder = keras.models.Sequential()\n",
     "    decoder.add(L.InputLayer((code_size,)))\n",
-    "    decoder.add(L.Dense(2*2*256))\n",
+    "    decoder.add(L.Dense(1024))\n",
     "    decoder.add(L.Reshape((2,2,256)))\n",
-    "    decoder.add(L.Conv2DTranspose(filters=128, kernel_size=(3, 3), strides=2, activation='relu', padding='same'))\n",
-    "    decoder.add(L.Conv2DTranspose(filters=64, kernel_size=(3, 3), strides=2, activation='relu', padding='same'))\n",
-    "    decoder.add(L.Conv2DTranspose(filters=32, kernel_size=(3, 3), strides=2, activation='relu', padding='same'))\n",
-    "    decoder.add(L.Conv2DTranspose(filters=3, kernel_size=(3, 3), strides=2, activation=None, padding='same'))\n",
+    "    decoder.add(L.Conv2DTranspose(filters=128, kernel_size=(3,3), strides=2, activation='relu', padding='same'))\n",
+    "    decoder.add(L.Conv2DTranspose(filters=64, kernel_size=(3,3), strides=2, activation='relu', padding='same'))\n",
+    "    decoder.add(L.Conv2DTranspose(filters=32, kernel_size=(3,3), strides=2, activation='relu', padding='same'))\n",
+    "    decoder.add(L.Conv2DTranspose(filters=3, kernel_size=(3,3), strides=2, activation=None, padding='same'))\n",
     "    \n",
     "    return encoder, decoder"
    ]
