Zipped Coursera assignment

--- a/2 - How to Win a Data Science Competition/6 - Kaggle Competition Final Project/Assignment 6 - Kaggle Competition Final Project (Predict Future Sales).ipynb
+++ b/2 - How to Win a Data Science Competition/6 - Kaggle Competition Final Project/Assignment 6 - Kaggle Competition Final Project (Predict Future Sales).ipynb
@@ -31,7 +31,7 @@
     "        2.7. Feature matrix\n",
     "    3. Exploratory data analysis\n",
     "        3.1. Target variable\n",
-    "        3.2. Categorical heatmaps\n",
+    "        3.2. Multivariate heatmaps (numerical/categorical pairings)\n",
     "    4. Advanced feature engineering\n",
     "        4.1. Mean encoding on categorical features\n",
     "        4.2. tSNE\n",
@@ -93,17 +93,17 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA, TruncatedSVD\n",
     "from sklearn.manifold import TSNE\n",
-    "#from MulticoreTSNE import MulticoreTSNE as TSNE\n",
+    "#from MulticoreTSNE import MulticoreTSNE as TSNE (not used)\n",
     "import lightgbm as lgb\n",
     "import xgboost as xgb\n",
-    "#import catboost as cat\n",
+    "#import catboost as cat (not used)\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso, Lars, ElasticNet\n",
-    "#from bayes_opt import BayesianOptimization\n",
-    "#import shap\n",
+    "#from bayes_opt import BayesianOptimization (not used)\n",
+    "#import shap (not used)\n",
     "from sklearn.externals import joblib\n",
-    "#import tensorflow as tf\n",
-    "#os.environ['KERAS_BACKEND'] = 'tensorflow'\n",
-    "#import keras"
+    "#import tensorflow as tf (not used)\n",
+    "#os.environ['KERAS_BACKEND'] = 'tensorflow' (not used)\n",
+    "#import keras (not used)"
    ]
   },
   {
@@ -604,7 +604,7 @@
    "source": [
     "## 2.2. Extracting categorical features from Russian item names\n",
     "\n",
-    "We add more categorical features for items in order to enrich our model:"
+    "We add more categorical features for items in order to enrich our training data:"
    ]
   },
   {
@@ -1109,7 +1109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the most challenging aspects of this competition is that the testing set to be submitted on Kaggle is devoid of features. The test set represents pairs of `(item ID, shop ID)` for the month of November 2015. It is thus a time series problem where we are using sales' results from January 2013 to October 2015 to predict future sales (November 2015). We add the test set to the train set by adding a 34th `date_block_num` key."
+    "One of the most challenging aspects of this competition is that the testing set to be submitted on Kaggle is devoid of features. The test set represents pairs of `(item ID, shop ID)` for the month of November 2015. It is thus a time series problem where we are using sales' results from January 2013 to October 2015 to predict future sales (November 2015). We add the test set to the training set by adding a 34th `date_block_num` key."
    ]
   },
   {
@@ -1603,7 +1603,7 @@
    "source": [
     "## 2.6. Create time series trend features\n",
     "\n",
-    "We also want to capture past trends that might give us a hint of the future sales evolution (and thus information on the testing set)."
+    "We also want to capture past trends that might give us a hint of the future sales evolution (and thus information on the testing set):"
    ]
   },
   {
@@ -2562,9 +2562,9 @@
    "source": [
     "## 4.2. t-SNE\n",
     "\n",
-    "**NOTE: I ran tSNE on the entire training set and it eventually led to a *Memory Error* flag. Thus in the interest of simply assessing the nonlinearity of the data and not create new interaction features, I will only implement tSNE on the last 3 months of training data.**\n",
+    "**NOTE: I ran tSNE on the entire training set for 9 hours and it eventually led to a *Memory Error* flag. Thus in the interest of simply assessing the nonlinearity of the data and not creating new interaction features, I will only implement tSNE on the last 3 months of training data. (I tried with Multicore tSNE but it failed to install properly)**.\n",
     "\n",
-    "Before implementing t-distributed stochastic neighbor embedding (tSNE) to uncover a hidden embedded structure in the training data, we start by implementation principal component analysis for uncovering linear embeddings in the data. PCA's implementation is fast and should serve as a starting point for any further moves into nonlinear unsupervised learning models."
+    "Before implementing t-distributed stochastic neighbor embedding (tSNE) to uncover a hidden embedded structure in the training data, we start by implementing *principal component analysis* (PCA) for uncovering linear embeddings in the data. PCA's implementation is fast and should serve as a starting point before any further moves into nonlinear unsupervised learning."
    ]
   },
   {
@@ -2721,6 +2721,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now for *t-distributed stochastic neighbor embedding*:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -2743,7 +2750,7 @@
     }
    ],
    "source": [
-    "# WARNING: Took 7h to run on a single CPU laptop\n",
+    "# WARNING: Took over 6h to run on a single CPU laptop\n",
     "X_embedded = TSNE(n_components=2, perplexity=30.0, verbose=0, n_iter=250).fit_transform(X_norm)\n",
     "X_embedded"
    ]
@@ -2878,7 +2885,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This doesn't look really good. Maybe the data is linearly separable (this could explain why linear regression performs well in the next section)? Or maybe the choice of perplexity at 30 is wrong? This would require more tests but computationally on my laptop this is way to time consuming."
+    "This doesn't look really good. Maybe the choice of perplexity at 30 is wrong? Maybe limiting to only 3 months of data and extrapolating for the entire dataset is not a good approach? Or maybe tSNE is notoriously hard to implement. This would require more tests but computationally on my laptop it takes far too much time to run tSNE so I will just leave it at that."
    ]
   },
   {
@@ -3576,7 +3583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My official submission: **XGBoost** (from section 5.3)"
+    "My official submission: **XGBoost** (from section 5.3) on the CSV file `submission1.csv`"
    ]
   },
   {
