Update LSTM assignment.

--- a/4 - Natural Language Processing/assignments/2 - Language modelling with PGM and Neural Networks/Assignment 2 - Recognize named entities on Twitter with LSTMs.ipynb
+++ b/4 - Natural Language Processing/assignments/2 - Language modelling with PGM and Neural Networks/Assignment 2 - Recognize named entities on Twitter with LSTMs.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "724"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,9 +417,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np"
@@ -427,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,16 +891,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21966, 21)"
+       "(20505, 21)"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 33,
    "metadata": {
     "scrolled": false
    },
@@ -960,47 +969,47 @@
       "\n",
       "-------------------- Epoch 1 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 77726 phrases; correct: 169.\n",
+      "processed 105778 tokens with 4489 phrases; found: 70431 phrases; correct: 138.\n",
       "\n",
-      "precision:  0.22%; recall:  3.76%; F1:  0.41\n",
+      "precision:  0.20%; recall:  3.07%; F1:  0.37\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 9567 phrases; correct: 20.\n",
+      "processed 12836 tokens with 537 phrases; found: 8536 phrases; correct: 22.\n",
       "\n",
-      "precision:  0.21%; recall:  3.72%; F1:  0.40\n",
+      "precision:  0.26%; recall:  4.10%; F1:  0.48\n",
       "\n",
       "-------------------- Epoch 2 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 2513 phrases; correct: 708.\n",
+      "processed 105778 tokens with 4489 phrases; found: 1570 phrases; correct: 553.\n",
       "\n",
-      "precision:  28.17%; recall:  15.77%; F1:  20.22\n",
+      "precision:  35.22%; recall:  12.32%; F1:  18.25\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 213 phrases; correct: 64.\n",
+      "processed 12836 tokens with 537 phrases; found: 162 phrases; correct: 49.\n",
       "\n",
-      "precision:  30.05%; recall:  11.92%; F1:  17.07\n",
+      "precision:  30.25%; recall:  9.12%; F1:  14.02\n",
       "\n",
       "-------------------- Epoch 3 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 4530 phrases; correct: 1161.\n",
+      "processed 105778 tokens with 4489 phrases; found: 4627 phrases; correct: 1997.\n",
       "\n",
-      "precision:  25.63%; recall:  25.86%; F1:  25.75\n",
+      "precision:  43.16%; recall:  44.49%; F1:  43.81\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 315 phrases; correct: 96.\n",
+      "processed 12836 tokens with 537 phrases; found: 346 phrases; correct: 135.\n",
       "\n",
-      "precision:  30.48%; recall:  17.88%; F1:  22.54\n",
+      "precision:  39.02%; recall:  25.14%; F1:  30.58\n",
       "\n",
       "-------------------- Epoch 4 of 4 --------------------\n",
       "Train data evaluation:\n",
-      "processed 105778 tokens with 4489 phrases; found: 3926 phrases; correct: 1486.\n",
+      "processed 105778 tokens with 4489 phrases; found: 5002 phrases; correct: 2693.\n",
       "\n",
-      "precision:  37.85%; recall:  33.10%; F1:  35.32\n",
+      "precision:  53.84%; recall:  59.99%; F1:  56.75\n",
       "\n",
       "Validation data evaluation:\n",
-      "processed 12836 tokens with 537 phrases; found: 368 phrases; correct: 104.\n",
+      "processed 12836 tokens with 537 phrases; found: 424 phrases; correct: 160.\n",
       "\n",
-      "precision:  28.26%; recall:  19.37%; F1:  22.98\n",
+      "precision:  37.74%; recall:  29.80%; F1:  33.30\n",
       "\n",
       "...training finished.\n"
      ]
@@ -1040,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1058,7 @@
        "(5795, 724, 724)"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1068,27 +1077,27 @@
      "output_type": "stream",
      "text": [
       "-------------------- Train set quality: --------------------\n",
-      "processed 105778 tokens with 4489 phrases; found: 4051 phrases; correct: 1817.\n",
+      "processed 105778 tokens with 4489 phrases; found: 5107 phrases; correct: 3317.\n",
       "\n",
-      "precision:  44.85%; recall:  40.48%; F1:  42.55\n",
+      "precision:  64.95%; recall:  73.89%; F1:  69.13\n",
       "\n",
-      "\t     company: precision:   72.05%; recall:   74.96%; F1:   73.48; predicted:   669\n",
+      "\t     company: precision:   72.56%; recall:   86.78%; F1:   79.04; predicted:   769\n",
       "\n",
-      "\t    facility: precision:   41.58%; recall:   36.94%; F1:   39.12; predicted:   279\n",
+      "\t    facility: precision:   13.21%; recall:   14.01%; F1:   13.60; predicted:   333\n",
       "\n",
-      "\t     geo-loc: precision:   58.12%; recall:   89.16%; F1:   70.36; predicted:  1528\n",
+      "\t     geo-loc: precision:   78.64%; recall:   93.88%; F1:   85.58; predicted:  1189\n",
       "\n",
-      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     8\n",
       "\n",
-      "\t musicartist: precision:   14.29%; recall:    0.43%; F1:    0.84; predicted:     7\n",
+      "\t musicartist: precision:   54.38%; recall:   50.86%; F1:   52.56; predicted:   217\n",
       "\n",
-      "\t       other: precision:   28.72%; recall:   37.25%; F1:   32.43; predicted:   982\n",
+      "\t       other: precision:   54.96%; recall:   81.90%; F1:   65.78; predicted:  1128\n",
       "\n",
-      "\t      person: precision:    0.75%; recall:    0.34%; F1:    0.47; predicted:   400\n",
+      "\t      person: precision:   82.57%; recall:   91.99%; F1:   87.03; predicted:   987\n",
       "\n",
-      "\t     product: precision:   24.32%; recall:   14.15%; F1:   17.89; predicted:   185\n",
+      "\t     product: precision:   46.10%; recall:   66.98%; F1:   54.62; predicted:   462\n",
       "\n",
-      "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     1\n",
+      "\t  sportsteam: precision:  100.00%; recall:    6.45%; F1:   12.12; predicted:    14\n",
       "\n",
       "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n"
@@ -1102,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1110,25 +1119,25 @@
      "output_type": "stream",
      "text": [
       "-------------------- Validation set quality: --------------------\n",
-      "processed 12836 tokens with 537 phrases; found: 354 phrases; correct: 127.\n",
+      "processed 12836 tokens with 537 phrases; found: 545 phrases; correct: 188.\n",
       "\n",
-      "precision:  35.88%; recall:  23.65%; F1:  28.51\n",
+      "precision:  34.50%; recall:  35.01%; F1:  34.75\n",
       "\n",
-      "\t     company: precision:   64.47%; recall:   47.12%; F1:   54.44; predicted:    76\n",
+      "\t     company: precision:   59.34%; recall:   51.92%; F1:   55.38; predicted:    91\n",
       "\n",
-      "\t    facility: precision:   33.33%; recall:   20.59%; F1:   25.45; predicted:    21\n",
+      "\t    facility: precision:    9.09%; recall:    5.88%; F1:    7.14; predicted:    22\n",
       "\n",
-      "\t     geo-loc: precision:   51.82%; recall:   50.44%; F1:   51.12; predicted:   110\n",
+      "\t     geo-loc: precision:   68.13%; recall:   54.87%; F1:   60.78; predicted:    91\n",
       "\n",
       "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
-      "\t musicartist: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t musicartist: precision:   15.38%; recall:   14.29%; F1:   14.81; predicted:    26\n",
       "\n",
-      "\t       other: precision:   13.33%; recall:   17.28%; F1:   15.05; predicted:   105\n",
+      "\t       other: precision:   15.10%; recall:   35.80%; F1:   21.25; predicted:   192\n",
       "\n",
-      "\t      person: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    22\n",
+      "\t      person: precision:   55.17%; recall:   28.57%; F1:   37.65; predicted:    58\n",
       "\n",
-      "\t     product: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    20\n",
+      "\t     product: precision:    7.69%; recall:   14.71%; F1:   10.10; predicted:    65\n",
       "\n",
       "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
@@ -1144,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1152,27 +1161,27 @@
      "output_type": "stream",
      "text": [
       "-------------------- Test set quality: --------------------\n",
-      "processed 13258 tokens with 604 phrases; found: 417 phrases; correct: 149.\n",
+      "processed 13258 tokens with 604 phrases; found: 551 phrases; correct: 199.\n",
       "\n",
-      "precision:  35.73%; recall:  24.67%; F1:  29.19\n",
+      "precision:  36.12%; recall:  32.95%; F1:  34.46\n",
       "\n",
-      "\t     company: precision:   64.58%; recall:   36.90%; F1:   46.97; predicted:    48\n",
+      "\t     company: precision:   52.31%; recall:   40.48%; F1:   45.64; predicted:    65\n",
       "\n",
-      "\t    facility: precision:   25.00%; recall:   21.28%; F1:   22.99; predicted:    40\n",
+      "\t    facility: precision:    8.82%; recall:    6.38%; F1:    7.41; predicted:    34\n",
       "\n",
-      "\t     geo-loc: precision:   55.62%; recall:   53.94%; F1:   54.77; predicted:   160\n",
+      "\t     geo-loc: precision:   63.85%; recall:   50.30%; F1:   56.27; predicted:   130\n",
       "\n",
       "\t       movie: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n",
-      "\t musicartist: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t musicartist: precision:    8.70%; recall:    7.41%; F1:    8.00; predicted:    23\n",
       "\n",
-      "\t       other: precision:   15.00%; recall:   17.48%; F1:   16.14; predicted:   120\n",
+      "\t       other: precision:   19.75%; recall:   31.07%; F1:   24.15; predicted:   162\n",
       "\n",
-      "\t      person: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:    32\n",
+      "\t      person: precision:   56.94%; recall:   39.42%; F1:   46.59; predicted:    72\n",
       "\n",
-      "\t     product: precision:    5.88%; recall:    3.57%; F1:    4.44; predicted:    17\n",
+      "\t     product: precision:    4.69%; recall:   10.71%; F1:    6.52; predicted:    64\n",
       "\n",
-      "\t  sportsteam: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
+      "\t  sportsteam: precision:  100.00%; recall:    3.23%; F1:    6.25; predicted:     1\n",
       "\n",
       "\t      tvshow: precision:    0.00%; recall:    0.00%; F1:    0.00; predicted:     0\n",
       "\n"
